--- a/code/package.json
+++ b/code/package.json
@@ -2,6 +2,7 @@
   "name": "code",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rahuvash.github.io/us/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
