--- a/code/package.json
+++ b/code/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "homepage": "https://rahuvash.github.io/us/",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "material-table": "^1.69.3",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
